--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "knex": "^0.21.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
